Atualizado layout e adicionado imagens

--- a/View/cadastrar.html
+++ b/View/cadastrar.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/cadastrar.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="ladoEsquerdo">
+                <img src="../img/undraw_Add_file_re_s4qf.svg" alt="" class="imgLadoEsquerdo">
+            </div>
+            <div class="ladoDireito">
+                <form action="">
+                    <label for="Nome">Nome</label>
+                    <input type="text" name="nome" placeholder="Gilmar Alves">
+                    <label for="email">Email</label>
+                    <input type="text" name="email" placeholder="GilmarAlves914@gmail.com">
+                    <label for="senha">Senha</label>
+                    <input type="password" name="senha" placeholder="*********">
+                    <label for="github">GitHub</label>
+                    <input type="text" name="github" placeholder="https://github.com/GilmarAlves99">
+                    <label for="linkedin">Linkedin</label>
+                    <input type="text" name="linkedin" placeholder="https://www.linkedin.com/in/gilmar-zezilia-alves-336610182/">
+                    <label for="Instagram">Instagram</label>
+                    <input type="text" name="instagram" placeholder="https://www.instagram.com/gilmar.zezilia/">
+                    <label for="facebook">Facebook</label>
+                    <input type="text" name="facebook" placeholder="https://www.facebook.com/gilmar.zezilia">
+                    <label for="senha">whatsapp</label>
+                    <input type="text" name="whatsapp" placeholder="13997954520">
+                    <input type="submit" value="Cadastrar" onclick="location.href='cadastrar.html'">
+                    <input type="button" value="Já tenho conta" onclick="location.href='login.html'">
+                </form>
+            </div>
+
+        </div>
+    </header>
 </body>
+
 </html>
