--- a/View/login.html
+++ b/View/login.html
@@ -14,15 +14,16 @@
         <div class="container">
             <form action="">
 
-                <img src="https://avatars.githubusercontent.com/u/68366424?v=4" class="fotouser" title="fotoUsuario">
+                <img src="../img/4527372_army_avatar_character_game_golden_icon.svg" class="fotouser"
+                    title="fotoUsuario">
 
 
                 <label for="email">Email</label>
                 <input type="text" name="email" placeholder="Email">
                 <label for="senha">Senha</label>
                 <input type="password" name="senha" placeholder="Senha">
-          <input type="submit" value="Logar">
-          <input type="submit" value="Cadastrar">
+                <input type="submit" value="Logar">
+                <input type="button" value="Cadastrar" onclick="location.href='cadastrar.html'">
             </form>
         </div>
     </header>
