--- a/View/css/cadastrar.css
+++ b/View/css/cadastrar.css
@@ -1,11 +1,162 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 body {
     margin: 0;
     padding: 0;
+    background-color: rgb(223, 223, 223);
+    font-family: 'Roboto Mono', monospace;
 }
+
 header {
     position: absolute;
-    background-color: rgb(223, 223, 223);
     width: 100%;
     height: 100%;
 }
 
+.container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+form {
+    position: relative;
+    width: 100%;
+}
+
+label {
+    font-size: 1rem;
+}
+
+input {
+    text-align: center;
+    margin-top: 5px;
+    border: none;
+    width: 48vw;
+    height: 30px;
+    font-size: 0.8rem;
+}
+
+input:focus {
+    box-shadow: 0px 0px 5px 0px;
+    outline: #5252fc;
+}
+
+input[type=submit], [type=button] {
+    margin-right: 0.3vw;
+    width: 24vw;
+    height: 35px;
+    float: left;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    background-color: #00193a;
+    cursor: pointer;
+    color: #fff;
+}
+
+input[type=submit]:hover {
+    background-color: #000000;
+}
+
+.ladoEsquerdo {
+    height: 100%;
+    width: 50%;
+    float: left;
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.imgLadoEsquerdo {
+    height: 100%;
+    width: 50%;
+}
+
+.ladoDireito {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
+
+@media (min-height: 1000px) {
+    .container {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .ladoEsquerdo {
+        width: 100%;
+    }
+    .ladoDireito {
+        width: 100%;
+    }
+    form {
+        margin-bottom: 40px;
+        padding: 0 40px;
+        width: 100%;
+    }
+    input {
+        text-align: center;
+        width: 100%;
+        height: 60px;
+        font-size: 1.7em;
+    }
+    label {
+        font-size: 2em;
+        font-weight: bolder;
+        text-align: left;
+    }
+    .imgLadoEsquerdo {
+        top: 10px;
+        position: relative;
+        width: 80%;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    input[type=submit], [type=button] {
+        font-size: 1.9rem;
+        width: 49.5%;
+        height: 70px;
+        position: relative;
+        top: 10px;
+    }
+}
+
+@media (max-height: 1000px) and (max-width: 900px) {
+    .container {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .ladoEsquerdo {
+        width: 80%;
+    }
+    .ladoDireito {
+        width: 90%;
+    }
+    form {
+        padding: 30px;
+        width: 100%;
+    }
+    input {
+        text-align: center;
+        width: 100%;
+    }
+    label {
+        text-align: left;
+    }
+    .imgLadoEsquerdo {
+        top: 10px;
+        position: relative;
+        width: 80%;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    input[type=submit], [type=button] {
+        font-size: 1rem;
+        width: 49.5%;
+    }
+}
